# OnkoDICOM

./: .coveragerc  .gitignore  CalculateImages.py  DICOMDirectorySearch.py  DICOMStructure.py  Hash_map.csv  OnkoDICOM-Darwin.spec  OnkoDICOM-Linux.spec  OnkoDICOM-Windows.spec  OnkoDICOM-debug.spec  OnkoDICOM.spec  README.md  dev-requirements.txt  main-og.py  main.py  main.spec  main_gui.py  poetry.toml  pre-pre-requirements.txt  pre-requirements.txt  pyproject.toml  pytest.ini  refrence_results.md  requirements-without-deps.txt  requirements.txt  ruff.toml  setup.py  spatial_reg.dcm  transform.dcm
.github/workflows/: pythonapp.yml
Controller/: ImageFusionController.py  MainPageController.py
Gui_redesign/: main_gui.py  welcome_page.py
Gui_redesign/Controller/: new_gui_controller.py  top_level_controller.py
Gui_redesign/Model/: DICOMDirectorySearch.py  DICOMStructure.py  Worker.py
Gui_redesign/View/: open_patient.py  open_patient_liamEdit.py  open_patient_liamEdit_with_init.py  open_patient_with_init.py  welcome_page.py  welcome_page_liamEdit.py  welcome_page_liamEdit_with_init.py
Model/: DICOMStructure.py  GetPatientInfo.py  InitialModel.py
Model/LiveWireAlgorithm/: LiveWireSegmentation.py
View/: ImageFusionWindow.py  InputDialogs.py  ProgressWindow.py  PyradiProgressBar.py
data/: ICD10_Morphology.csv  ICD10_Topography.csv  ICD10_Topography_C.csv  line&fill_configuration  segmentation_lists.csv
data/csv/: batch_isodoseRoi.csv  clinical_data.csv  dvh_data.csv  imageFusion.csv  imageWindowing.csv  isodoseRoi.csv  organName.csv  pyradiomics_data.csv  segmentation_lists.csv  totalSegmentOrganNames.csv  volumeName.csv
data/json/: imageFusion.json
legacy/: main.py
legacy/src/Controller/: interPageController.py
legacy/src/View/: ProgressBar.py  openpage.py
res/: resources.qrc  stylesheet-win-linux.qss  stylesheet.qss
src/: _version.py  constant.py  constants.py  dicom_constants.py  test_tree.py
src/Controller/: ActionHandler.py  AddOnOptionsController.py  Add_On_OController.py  AutoSegmentationController.py  BatchProcessingController.py  GUIController.py  ImageFusionController.py  MainPageActionHandler.py  MainPageController.py  PathHandler.py  ROIOptionsController.py  RTStructFileLoader.py  TopLevelController.py  interPageController.py  mainPageController.py  new_gui_controller.py  pluginMController.py  top_level_controller.py
src/Model/: Anon.py  AutoSegmentation.py  BatchProcessFilter.py  BatchProcessFiltering.py  BatchProcesses.py  BatchProcessing.py  CalculateDVHs.py  CalculateImages.py  Configuration.py  DICOMData.py  DICOMDirectorySearch.py  DICOMStructure.py  DICOMStructuredReport.py  DICOMWidgetItem.py  DicomUtils.py  Display_CD_UI.py  ForceLink.py  GetPatientInfo.py  ISO2ROI.py  ImageFusion.py  ImageLoading.py  InitialModel.py  Isodose.py  IsodoseTest.py  IsodosesTest.py  LoadPatients.py  MachineLearningTester.py  MovingDictContainer.py  MovingModel.py  Multiprocessing.py  NiftiToRtstructConverter.py  PTCTDictContainer.py  PTCTModel.py  PatientDictContainer.py  Pyradiomics.py  ROI.py  ROITransfer.py  ROI_test.py  Radiomics.py  SUV2ROI.py  (+10 more)
src/Model/AutoSegmentation/: AutoSegmentViewState.py  AutoSegmentation.py  SavedSegmentDatabase.py  SegmentationListFilter.py
src/Model/DICOM/: DICOMDirectorySearch.py  DICOMStructuredReport.py  DICOMWidgetItem.py
src/Model/LiveWireAlgorithm/: Dijkstra.py  LiveWireSegmentation.py  livewiresegmentation.py
src/Model/batchprocessing/: BatchProcess.py  BatchProcessCSV2ClinicalDataSR.py  BatchProcessClinicalDataSR2CSV.py  BatchProcessDVH2CSV.py  (+11 more)
src/View/: AddOnOptions.py  Add_On_Options.py  BatchProcessingWindow.py  CustomWindowing.py  DVH.py  DicomTree.py  DicomView.py  Display_CD_UI.py  FirstTimeWelcomeWindow.py  FontsService.py  ImageFusionProgressWindow.py  ImageFusionWindow.py  ImageLoader.py  InputDialogs.py  IsodoseTab.py  MenuBar.py  MovingImageLoader.py  OpenPatientProgWindow.py  OpenPatientProgressWindow.py  OpenPatientWindow.py  PatientBar.py  PluginManager.py  ProgressBar.py  ProgressWindow.py  PyradiProgressBar.py  StructureInformation.py  StructureTab.py  StyleSheetReader.py  TreeDICOM.py  WelcomeWindow.py  WindowBarIconSetup.py  WindowingUI.py  color.txt  fonts_service.py  mainPage.py  open_patient.py  openpage.py  resources.qrc  resources_open_patient_rc.py  resources_rc.py  (+2 more)
src/data/: ICD10_Topography.csv  line&fill_configuration  records.pkl
src/res/: resources.qrc  stylesheet-win-linux.qss  stylesheet.qss
test/: conftest.py  test_autosegment_controller.py  test_autosegment_list_filter.py  test_autosegment_model.py  test_button_input_box.py  test_machine_learning_preprocessing.py  test_model_anon.py  test_model_batch_processes.py  test_model_check_attributes.py  test_model_configuration.py  test_model_dvh2rtdose.py  test_model_force_link.py  test_model_iso2roi.py  test_model_machinelearningtester.py  test_model_roi.py  test_model_suv2roi.py  test_model_worker.py  test_one_view_four_view.py  test_pet_ct.py  test_pyrad_to_sr.py  test_structures_tab.py  test_stylesheet_reader.py  test_view_clinical_data.py  test_view_dicom_tree.py  test_view_dicom_view.py  test_view_drawing.py  test_view_dvh_tab.py  test_view_first_time_welcome_window.py  test_view_iso2roi_gui.py  test_view_isodoses_tab.py  test_view_manipulate_roi.py  test_view_open_patient_window.py  test_view_structures_tab.py  test_view_suv2roi_gui.py
test/AutoSegment/: test_autosegment_controller.py  test_autosegment_view_state.py  test_saved_segment_database.py  test_view_segment_selector.py
test/ImageFusion/: test_image_fusion_tab_builder.py  test_manual_fusion_tab.py  test_views_image_fusion.py
(+518 files in other folders)
