[tool.poetry]
name = "onkodicom"
version = "0.6.0-dev1"
description = "OnkoDICOM is an extensible open source radiation therapy research platform based on the DICOM standard"
authors = ["Ashley Maher <ashley.maher@didymodesigns.com.au>"]
license = "LGPL"
readme = "README.md"
homepage = "https://onkodicom.com.au/"
repository = "https://github.com/didymo/OnkoDICOM"

[poetry.virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cython = "*"
numpy = "1.23.0"
platipy = "*"
alphashape = "*"
pandas = "^1.5.3"
scikit-build = "*"
scipy = "*"
dicompyler-core = "*"
pydicom = "*"
country-list = "*"
scikit-image = "*"
fuzzywuzzy = "*"
PyWavelets = "1.3.0"
networkx = "*"
# pymedphys has reinstated psuedonymisation in 0.39
pymedphys = { extras = ["user"], version =  "^0.39.3" }
# until 20230611, the pyradiomics does not have wheel for py3.10. Will install it with pip later.
# pyradiomics = [
#    { version = "==3.0.1", python = "<3.10"},
#    { version = "==3.0.1", python = ">=3.10"}
#]
pyside6 = "6.3.0"
vtk = "*"
shapely = ">=1.8.1,<2.0"
python-Levenshtein = "*"
opencv-python = "<4.6"
matplotlib = "*"
scikit-learn = "*"
imblearn = "*"
kaplanmeier = "*"
pyinstaller = "*"

[tool.poetry.group.dev.dependencies]
pylint = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-pylint = "*"
pytest-isort = "*"
pytest-mypy = "*"
pytest-qt = "*"
pytest-timeout = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
