[tool.poetry]
name = "onkodicom"
version = "0.6.1"
description = "OnkoDICOM is an extensible open source radiation therapy research platform based on the DICOM standard"
package-mode = false
authors = ["Ashley Maher <ashley.maher@didymodesigns.com.au>"]
license = "LGPL"
readme = "README.md"
homepage = "https://onkodicom.com.au/"
repository = "https://github.com/didymo/OnkoDICOM"

[poetry.virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cython = "*"
numpy = "^1.26.0"
platipy = "*"
alphashape = "*"
pandas = "^2.2.3"
scikit-build = "*"
scipy = "<2.0"
dicompyler-core = { git = "https://github.com/dicompyler/dicompyler-core.git" }
# pydicom 3.x has changed some API and dicompyler-core breaks on that
pydicom = "3.0.1"
country-list = "*"
scikit-image = "*"
fuzzywuzzy = "*"
PyWavelets = "1.3.0"
networkx = "*"
# pymedphys has reinstated psuedonymisation in 0.39
# something in OnkoDICOM does a recursive import on pymedphys, so now installing all extras in pymedphys
pymedphys = { extras = ["all"], version = "0.41.0" }
# until 20230611, the pyradiomics does not have wheel for py3.10. Will install it with pip later.
# pyradiomics = [
#    { version = "==3.0.1", python = "<3.10"},
#    { version = "==3.0.1", python = ">=3.10"}
#]
pyside6 = { version = ">=6.4.0,<6.9", python =">=3.10,<3.13" }
vtk = "*"
# shapely 1.8.3 through 1.8.5.post1 have build failures.  v2.0 has API changes.
shapely = ">=2.0"
python-Levenshtein = "*"
opencv-python = "<4.6"
matplotlib = "*"
scikit-learn = "*"
imblearn = "*"
kaplanmeier = "*"
pyinstaller = "*"
lifelines = "0.29.0"
pyradiomics = { git = "https://github.com/AIM-Harvard/pyradiomics.git" }
totalsegmentator = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pylint = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-pylint = "*"
pytest-isort = "*"
pytest-mypy = "*"
pytest-qt = "*"
pytest-timeout = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
